err/unofficial-googleplay-api.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/googleplay'...
Compiling './lib/python3.5/site-packages/googleplay/categories.py'...
***   File "./lib/python3.5/site-packages/googleplay/categories.py", line 18
    print SEPARATOR.join(["ID", "Name"])
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/googleplay/config.py'...
***   File "./lib/python3.5/site-packages/googleplay/config.py", line 14
    print "{}[{}]: ".format(name, default)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/googleplay/download.py'...
***   File "./lib/python3.5/site-packages/googleplay/download.py", line 22
    print "Usage: %s packagename [filename]"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/googleplay/googleplay.py'...
***   File "./lib/python3.5/site-packages/googleplay/googleplay.py", line 104
    print "authSubToken: " + authSubToken
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/googleplay/helpers.py'...
***   File "./lib/python3.5/site-packages/googleplay/helpers.py", line 21
    print SEPARATOR.join(l)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/googleplay/list.py'...
***   File "./lib/python3.5/site-packages/googleplay/list.py", line 14
    print "Usage: %s category [subcategory] [nb_results] [offset]" % sys.argv[0]
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/googleplay/permissions.py'...
***   File "./lib/python3.5/site-packages/googleplay/permissions.py", line 15
    print "Usage: %s packagename1 [packagename2 [...]]" % sys.argv[0]
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/googleplay/search.py'...
***   File "./lib/python3.5/site-packages/googleplay/search.py", line 14
    print "Usage: %s request [nb_results] [offset]" % sys.argv[0]
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/unofficial_googleplay_api-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
